plugins = [
	'10-example.lua',
	'10-dwt.lua',
	'10-logitech-mx-master-horiz-scroll.lua',
	'10-pointer-go-faster.lua',
	'10-pointer-go-slower.lua',
	'10-delay-motion.lua',
	'10-disable-feature.lua',
	'10-copilot-key-override.lua',
	'10-wheel-to-button.lua',
]

fs = import('fs')
foreach plugin : plugins
	fs.copyfile(plugin)
endforeach
